test/Serialization/builtin.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend -emit-module -parse-stdlib -o %t %S/Inputs/alias_builtin.code
// RUN: toolchain-bcanalyzer %t/alias_builtin.codemodule | %FileCheck %s
// RUN: %target-language-frontend -I %t -typecheck %s -verify

// CHECK-NOT: UnknownCode

import alias_builtin

var a : TheBuiltinInt64

// Check that it really is Builtin.Int64.
var wrapped = Int64(a) // okay
var badWrapped = Int32(a) // expected-error{{no exact matches in call to initializer}}
